[package]
name = "kixdns"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "signal", "sync"] }
hickory-proto = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arc-swap = "1.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
notify = "6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5"
ipnet = "2"
anyhow = "1"
bytes = "1"
regex = "1"
num_cpus = "1.16"
moka = { version = "0.12", features = ["sync"] }
socket2 = "0.5"
libc = "0.2"
rustc-hash = "2.1.1"

[dev-dependencies]
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
